# ArtifactStore

./: .env.example  .gitignore  ArtifactStore_PLAN.md  CLAUDE.md  README.md  pyproject.toml
artifactstore/: __init__.py  cite.py  cli.py  db.py  extractors.py  grants.py  previews.py  schema.sql  store.py  tokens.py  views.py
demo/: agent.py  prompts.py  providers.py  runner.py  tools.py  workloads.py
eval/: __main__.py  _aggregate_for_report.py  _compare_models.py  _compute_report_numbers.py  baselines.py  cleanup.py  delegation.py  driver.py  metrics.py
eval/fixtures/: _gen_pytest_ci_run.py  _gen_pytest_xl_run.py  _gen_pytest_xxl_run.py  git_diff_auth_refactor.diff  git_diff_auth_refactor.gold.json  pytest_auth_expiry.gold.json  pytest_ci_run.gold.json  pytest_large_run.gold.json  pytest_xl_run.gold.json  pytest_xxl_run.gold.json  rg_grep_noise.gold.json  rg_grep_noise.txt
eval/runs/2026-05-09T15-55-22Z/: audit.csv  config.json  manifest.json  result.jsonl
eval/runs/2026-05-10T11-44-03Z/: audit.csv  config.json  manifest.json  result.jsonl
notes/: agent_design.md  eval_writeup.md  qwen_vs_deepseek_n5.md  temp0_vs_temp1.md  xxl_100k_fixture.md
report/: architecture.typ
tests/: test_agent.py  test_audit.py  test_cite.py  test_cli.py  test_cli_inprocess.py  test_db.py  test_demo_e2e.py  test_dotenv.py  test_eval_baselines.py  test_eval_metrics.py  test_extractors.py  test_grants.py  test_links_provenance.py  test_refinements.py  test_review_fixes.py  test_search_robustness.py  test_smoke.py  test_store_api.py  test_stress.py  test_views.py
(+51 files in other folders)
