[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "artifactstore"
version = "0.0.1"
description = "Typed, permission-scoped tool-result store for AI agent harnesses"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.100.0",
    "typer>=0.12",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
artifactstore = "artifactstore.cli:main"

[tool.setuptools.packages.find]
include = ["artifactstore*", "demo*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
